--- a/assignment-8/package.json
+++ b/assignment-8/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && cp build/index.html build/200.html && surge build https://{acid-egg.surge.sh}"
   },
   "dependencies": {
     "axios": "^1.7.9",
