--- a/assignment-8/package.json
+++ b/assignment-8/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "npm run build && cp build/index.html build/200.html && surge build https://{acid-egg.surge.sh}"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
